--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,7 +34,7 @@
                                     <DataGridTemplateColumn>
                                         <DataGridTemplateColumn.CellTemplate>
                                             <DataTemplate>
-                                                <Button>Show Details</Button>
+                                                <Button Click="Detail_Button_Click" Content="Show Details" />
                                             </DataTemplate>
                                         </DataGridTemplateColumn.CellTemplate>
                                     </DataGridTemplateColumn>
